[Remote suggestions] Get favicon URLs from archive

Fetching favicons via content suggestions service is currently only
enabled for remote suggestions. The general API for getting the URL is
via content_suggestion.h which does not work for archived suggestions
(i.e. by Fetch More).

This CL introduces a quick fix to loop in remote suggestions provider
for the favicon URLs of suggestions not known to
ContentSuggestionsService. A cleaner fix requires more thinking /
refactoring.

This is a M59 merge candidate.

BUG=714025

Review-Url: https://codereview.chromium.org/2829963005
Cr-Commit-Position: refs/heads/master@{#466653}

Former-commit-id: 8083bc5ed7a1989652884bec28bf775dd198b447