components/ntp_snippets/remote/remote_suggestions_scheduler_impl_unittest.cc
@@ -78,6 +78,8 @@ class MockRemoteSuggestionsProvider : public RemoteSuggestionsProvider {
                void(const RemoteSuggestionsProvider::FetchStatusCallback&));
   MOCK_CONST_METHOD0(suggestions_fetcher_for_debugging,
                      const RemoteSuggestionsFetcher*());
+  MOCK_CONST_METHOD1(GetUrlWithFavicon,
+                     GURL(const ContentSuggestion::ID& suggestion_id));
   MOCK_METHOD1(GetCategoryStatus, CategoryStatus(Category));
   MOCK_METHOD1(GetCategoryInfo, CategoryInfo(Category));
   MOCK_METHOD3(ClearHistory,
